[package]
name = "github-issue-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
futures = "0.3.28"
indexmap = { version = "2.6", features = ["serde"] }
parse_link_header = "0.3.3"
reqwest = { version = "0.11.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.33.0", features = ["full"] }
ttl_cache = "0.5.1"
url = "2.5"
